--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html>
 
@@ -9,19 +8,7 @@
 </head>
 
 <body>
-	<p>directory : src/main/resources/static/index.html</p>
+	<h2>directory : src/main/resources/static/index.html</h2>
 </body>
 
-=======
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>title</title>
-</head>
-<body>
-	<h2>static index</h2>
-</body>
->>>>>>> branch 'main' of https://github.com/dollerpeak/springboot-react.git
 </html>
